style(contact-page): fix headers size on small mobile devices

--- a/AuxilliumWeb/frontend/auxilium-web/src/components/ContactContainer/ContactWrapper.module.css
+++ b/AuxilliumWeb/frontend/auxilium-web/src/components/ContactContainer/ContactWrapper.module.css
@@ -75,3 +75,8 @@ p {
     font-size: clamp(0.8rem, 1.8vw, 0.9rem);
   }
 }
+@media (max-width: 425px) {
+  h4 {
+    font-size: clamp(1.2rem, 5vw, 1.7rem);
+  }
+}
