--- a/AuxilliumWeb/frontend/auxilium-web/src/pages/contact-page/ContactPage.module.css
+++ b/AuxilliumWeb/frontend/auxilium-web/src/pages/contact-page/ContactPage.module.css
@@ -85,7 +85,7 @@ h3 {
   }
 
   h3 {
-    font-size: clamp(1.6rem, 7vw, 2.5rem);
+    font-size: clamp(2rem, 8vw, 3.5rem);
     margin-top: 1.5vh;
   }
 
